--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -39,11 +39,11 @@
 
 
 
-<!-- <div layout layout-align="center center">
+<div layout layout-align="center center">
   <table id="mineSweep">
 
   </table>
-</div> -->
+</div>
 
 
 
@@ -55,11 +55,116 @@
 
 <hr>
 
+<div layout="column" layout-align="center center" id="post10">
+  <div >
+    <h2 class="blogTitle">Building Minesweeper</h2>
+  </div>
+  <div class="blogSubtitle">
+    Jan. 6, 2018
+  </div>
+</div>
+
+<div class="blogText">
+  How might we go about building the game Minesweeper? Let's go through the steps (using AngularJS):
+</div>
+
+<ol class="blogText">
+  <li class="blogText">To build our grid (of size n x n), we can use an HTML <span class="codeBit">table</span>. Using a loop within a loop, we can add data cells (containing buttons) to each row, and then <span class="codeBit">append</span> the row to our table.</li>
+
+  <pre><code layout layout-align="center center">function drawGridMines(n) {
+    var table = angular.element(
+      document.getElementById('mineSweep'));
+    var mineRow = [];
+    var mineRowVals = [];
+    for (var k=0; k < n; k++) {
+      for (var i=0; i < n; i++) {
+        mineRow.push('&lt;td&gt;&lt;button class="mineButton row' +
+          k + 'col' + i + '"ng-click="bc.checkBoxMine($event)">
+          &lt;/button>&lt;/td>');
+        mineRowVals.push('0');
+      }
+    var fullRow = '&lt;tr>' + mineRow + '&lt;/tr>';
+    table.append($compile(fullRow)($scope));
+    mineRow = [];
+
+    valuesOnGrid.push(mineRowVals);
+    mineRowVals = [];
+  }</code></pre>
+
+  <div class="blogText">We give each button an <span class="codeBit">id</span>, e.g. <span class="codeBit">row1col3</span>, so that it knows its row/column position. Note that we must wrap our element with <span class="codeBit">angular.element()</span> in order to <span class="codeBit">append</span> to it. Further, we need to <span class="codeBit">$compile</span> our HTML before appending it.</div>
+
+  <li class="blogText">We store the values that live underneath each button (either 'bomb' or a number representing the number of adjacent bombs) in an array of arrays, <span class="codeBit">valuesOnGrid</span>. To start, let's put a '0' in each cell.</li>
+
+  <li class="blogText">Next we need to generate our bombs &mdash; the trick here is to ensure that we put each bomb in a unique cell. Then we update our <span class="codeBit">valuesOnGrid</span> array to reflect the positions of the bombs:</li>
+
+  <pre><code layout layout-align="center center">for (var j=0; j < mines.length; j++) {
+        var mine = mines[j];
+        valuesOnGrid[mine.row][mine.col] = 'b';
+      }</code></pre>
+
+  <li class="blogText">We need to get the count of adjacent bombs for each cell. We can write a function, <span class="codeBit">getNeighbors(r, c)</span>, to find all of a cell's neighbors (taking into account that it may lie on the table's edge). I will spare you my rather clumsy code.</li>
+
+  <li class="blogText">Then we can feed the array of neighbors into a <span class="codeBit">checkForBombs</span> function that updates our <span class="codeBit">valuesOnGrid</span> array with numeric values:</li>
+
+  <pre><code layout layout-align="center center">function checkForBombs(r, c) {
+    var neighbors = getNeighbors(r, c);
+    var v = valuesOnGrid[r][c];
+
+    if (v != 'b') {
+      var intV = parseInt(v);
+      for (var i=0; i< neighbors.length; i++) {
+        var n = neighbors[i];
+        var val = valuesOnGrid[n.row][n.col];
+        if (val == 'b') {
+          intV ++;
+        }
+      }
+      valuesOnGrid[r][c] = String(intV);
+    }
+  }
+
+valuesOnGrid.forEach(function(arr, index) {
+    var ind = index;
+    arr.forEach(function(v, index) {
+      checkForBombs(ind, index);
+    });
+  });
+</code></pre>
+
+  <li class="blogText">What happens if the player clicks a button? We check whether there is a bomb there; if so, they lose. If not, remove the button to reveal the number. (This is why we must pass <span class="codeBit">$event</span> into each button's <span class="codeBit">ng-click</span>. We can use <span class="codeBit">ev.target.getAttribute("class")</span> in the controller to access the clicked button's class, which contains information about its position. To find out what value lives at that position, we use <span class="codeBit">valuesOnGrid[row][col]</span>. We remove the button with <span class="codeBit">ev.currentTarget.remove()</span>.)</li>
+
+  <li class="blogText">The really tricky part is opening up islands &mdash; sometimes, when you click a button, multiple cells will open up. I believe the logic is:</li>
+  <ul>
+    <li class="blogText">Check the clicked cell's neighbors for 0s.</li>
+    <li class="blogText">For each 0 among the neighbors, open up that cell and all of <i>its</i> neighbors. (Because the value is 0, we are guaranteed to never reveal a bomb.)</li>
+    <li class="blogText">If any of the opened neighbors contains a 0, repeat the above.</li>
+  </ul>
+
+  <pre><code layout layout-align="center center">function checkForZeros(r, c) {
+      var neighbors = getNeighbors(r, c, 5);
+      neighbors.forEach(function(n) {
+        var pos = String(n.row) + String(n.col);
+        if (valuesOnGrid[n.row][n.col] === '0'
+          && !newNeighbors.includes(pos)) {
+            newNeighbors.push(pos);
+            checkForZeros(n.row, n.col);
+          }
+        });
+      }</code></pre>
+
+  <li class="blogText">Finally, we'll want to add in right-click functionality for flagging spaces suspected to contain bombs. When the user opens up every square that doesn't contain a bomb, they win!</li>
+</ol>
 
 
 
 
 
+
+
+
+
+
+<hr>
 
 
 <div layout="column" layout-align="center center" id="post9">
@@ -87,7 +192,7 @@
   We can start by adding (in our HTML) a pair of <span class='codeBit'>select</span> tags to allow a user to choose a particular project, month, type or country. First, the user can choose which category they are interested in:
 </div>
 
-<code layout layout-align="center center">//Choose a View:
+<code layout layout-align="center center">&lt;!--Choose a View:-->
   <br><br>{{bc.html11}}
   <br>&emsp;{{bc.html12}}
   <br>&emsp;{{bc.html13}}
@@ -102,7 +207,7 @@
 </div>
 
 <div id="html2" layout layout-align="center center">
-  <code>//Choose a particular:
+  <code>&lt;!--Choose a particular:-->
     <br><br>{{bc.html2a}}
     <br>&emsp;{{bc.html2b}}
     <br>&emsp;&emsp;{{bc.html2c}}
@@ -153,16 +258,17 @@ WHERE "users"."id" = $1 AND ' + view + '."name" = $2;';
 </code></pre>
 
 <div class="blogText">
-  This is a variable query: we pass <span class="codeBit">slice = req.body.slice</span> and <span class="codeBit">view = req.body.view</span> directly into the query string, and additionally we pass an array of variables specifying the user ($1) and the particular ($2).
+  This is a variable query. We pass <span class="codeBit">slice = req.body.slice</span> and <span class="codeBit">view = req.body.view</span> directly into the query string (don't forget to concatenate the strings around the variables!). Additionally, we pass an array of variables specifying the user (<span class="codeBit">$1</span>) and the particular (<span class="codeBit">$2</span>) to our <span class="codeBit">db.query()</span>: <span class="codeBit">[req.user.id, req.body.particular]</span>.
 </div>
 
 <div class="blogText">
-  We take the user's input &mdash; view, particular and slice &mdash; and convert it into a query. Breaking things down:
+  Let's break down our query:
+<!-- </div> -->
   <ul>
-    <li>We first include among the columns we <span class="codeBit">SELECT</span> a <span class="codeBit">SUM</span> of the values in each row, for all of our columns;</li>
-    <li>We <span class="codeBit">PARTITION</span> this sum by the chosen <span class="codeBit">slice</span>;</li>
-    <li>We have each query grab from the entire database, since the inputs are variable;</li>
-    <li>And finally we tell the database which user and which particular <span class="codeBit">view</span> we are interested in.</li>
+    <li class="blogText">We first include among the columns we <span class="codeBit">SELECT</span> a <span class="codeBit">SUM</span> of the values in all rows, for each of our columns;</li>
+    <li class="blogText">We <span class="codeBit">PARTITION</span> this sum by the chosen <span class="codeBit">slice</span>;</li>
+    <li class="blogText">We have each query grab from the entire database, since the inputs are variable;</li>
+    <li class="blogText">And finally we tell the database which user and which particular <span class="codeBit">view</span> we are interested in.</li>
   </ul>
 </div>
 
@@ -576,7 +682,7 @@ print myArray
 </div>
 
 <div class="blogText">
-  (<b>Note</b>: for information on <span class='blogText'>ctx</span>, see my earlier posts.)
+  (<b>Note</b>: for information on <span class='codeBit'>ctx</span>, see my earlier posts.)
 </div>
 
 <pre><code layout layout-align="center center">function drawLeaf(L) {
@@ -1028,6 +1134,7 @@ var omega = Bodies.circle(500, 500, 100, {isStatic: true});
   <div class="prevPosts" layout="column" flex="12">
     <div class="allposts" layout layout-align="center center">All Posts:</div>
     <ul class="postlist">
+      <li ng-click="bc.goToPost(10)">Building Minesweeper</li>
       <li ng-click="bc.goToPost(9)">Creating a Customizable Chart</li>
       <li ng-click="bc.goToPost(8)">Binary Counting and the Towers of Hanoi</li>
       <li ng-click="bc.goToPost(7)">Sizes of Infinite Sets</li>
