cleaning up, almost ready to push up segmented blog

--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,11 @@
   <script type="text/javascript" src="scripts/controllers/about.js"></script>
   <script type="text/javascript" src="scripts/controllers/blog.js"></script>
   <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
+
+  <script type="text/javascript" src="scripts/controllers/code.js"></script>
+  <script type="text/javascript" src="scripts/controllers/math.js"></script>
+  <script type="text/javascript" src="scripts/controllers/other.js"></script>
+
   <link rel="stylesheet" href="styles/style.css">
 
 <!-- very odd that title will not change but regular text will: ahhhhhha it was because it is looking at the *other* index! No actually it was even stranger, i ended up just changing it on github-->
