--- a/views/templates/about.html
+++ b/views/templates/about.html
@@ -87,7 +87,7 @@
             <a href="http://github.com/zackstout">
               <img class="icon" src="styles/github_icon.svg"></a>
               &emsp; <a class="linkTextAbout" href="http://github.com/zackstout"><span>
-                github.com/zackstout
+                zackstout
               </span></a>
             </div>
 
@@ -97,7 +97,7 @@
               <a href="https://www.linkedin.com/in/zack-stout-001/">
                 <img class="icon" src="styles/linkedin_icon.png"></a>
                 &emsp; <a class="linkTextAbout" href="https://www.linkedin.com/in/zack-stout-01/"><span>
-                  linkedin.com/in/zack-stout-01
+                  zack-stout-01
                 </span></a>
               </div>
 
@@ -106,6 +106,10 @@
 
             <div layout="row" class="emailCont" layout layout-align="center center">
               <img class="icon" src="styles/gmail_icon2.ico"> &emsp; <a class="linkTextAbout" href="mailto:zackstout@gmail.com"><span>zackstout@gmail.com</span></a>
+            </div>
+
+            <div layout="row" class="emailCont" layout layout-align="center center">
+              <a class="linkTextAbout" href="styles/resume_zstout_3.pdf"><span>My Resume</span></a>
             </div>
 
             <!-- </div> -->
