--- a/views/templates/portfolio.html
+++ b/views/templates/portfolio.html
@@ -57,10 +57,10 @@
         <a class="linkText" href="https://github.com/footprint-project/Footprint">
           <img class="icon2" src="styles/github_icon.svg">GitHub Repository</a>
         </p>
-        <!-- <p>
-          <a class="linkText" href="https://hidden-fortress-46439.herokuapp.com">
+        <p>
+          <a class="linkText" href="https://polar-spire-15237.herokuapp.com/">
           <img class="icon2" src="styles/heroku_icon.png" alt="">Live Demo</a>
-        </p> -->
+        </p>
     </div>
 
 
