--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,7 @@
 
 .clickMe:hover {
   background-color: midnightBlue;
+  cursor: pointer;
 }
 
 .alive {
@@ -248,6 +249,68 @@ hr {
   margin-top: 10px;
 }
 
+.allposts {
+  font-family: Baskerville;
+  font-size: 20px;
+  /*margin-left: 88px;*/
+  font-weight: bold;
+  margin-bottom: -20px;
+  margin-top: 25px;
+  /*overflow: auto;*/
+}
+
+
+/*ahh yes this was the magic piece:*/
+.allowOver {
+  overflow: visible;
+}
+
+.subBlog {
+  width: 140px;
+  background-color: teal;
+  color: gold;
+  text-transform: uppercase;
+  font-family: Impact;
+;
+  font-size: 20px;
+}
+
+.subBlog:hover {
+  cursor: pointer;
+  background-color: midnightblue;
+  /*color: midnightBlue;*/
+}
+
+#datesList {
+  margin-right: 30px;
+}
+
+.brags, .brags2 {
+  margin-top: 10px;
+}
+
+.brags2:hover {
+  background-color: mediumTurquoise;
+}
+
+
+
+.subSubBlog {
+  margin-top: 19px;
+  margin-left: 27px;
+}
+
+.subSubBlog1 {
+  margin-top: 19px;
+  margin-left: 35px;
+}
+.subSubBlog2 {
+  margin-top: 19px;
+  margin-left: 30px;
+}
+
+
+
 .containerContainer {
   margin-left: 50px;
 }
@@ -257,17 +320,6 @@ hr {
 }
 
 
-
-
-.allposts {
-  font-family: Baskerville;
-  font-size: 20px;
-  /*margin-left: 88px;*/
-  font-weight: bold;
-  margin-bottom: -20px;
-  margin-top: 25px;
-  overflow: scroll;
-}
 
 /*.prevPosts {
   position: fixed;
@@ -367,6 +419,30 @@ code {
   margin-bottom: 15px;
   font-family: Baskerville;
   /*font-size: 17px;*/
+}
+
+.snakeCell {
+  height: 25px;
+  width: 25px;
+  background-color: blue;
+  margin-top: -3px;
+  margin-right: -3px;
+}
+
+.snakeLive {
+  height: 25px;
+  width: 25px;
+  background-color: gold;
+  margin-top: -3px;
+  margin-right: -3px;
+}
+
+.apple {
+  height: 25px;
+  width: 25px;
+  background-color: red;
+  margin-top: -3px;
+  margin-right: -3px;
 }
 
 /*.blogText2 {
