solved issue of tabs not appearing when blog page first loads.. now just need to get them to click to page and then scroll

--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,9 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <script src="scripts/blogservice.js" charset="utf-8"></script>
+
+
   <script type="text/javascript" src="scripts/client.js"></script>
   <script src="scripts/controllers/nav.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/controllers/about.js"></script>
@@ -25,6 +28,7 @@
   <script type="text/javascript" src="scripts/controllers/code.js"></script>
   <script type="text/javascript" src="scripts/controllers/math.js"></script>
   <script type="text/javascript" src="scripts/controllers/other.js"></script>
+
 
   <link rel="stylesheet" href="styles/style.css">
 
