--- a/views/templates/math.html
+++ b/views/templates/math.html
@@ -35,17 +35,10 @@
 
   </div>
 
-  <!-- Idea for post: kinetic and potential energy of, say, a pendulum.
-
-  Idea for post: Stretch, implement slider for current value, and change view to look straight down the current-line and see how magnetic fields are affected, i.e. see a ball moving with different speed.
-
-  Idea for post: Relativity elevators with balls shooting from top to bottom. That visual really stuck with me. And you can't know whether you're accelerating or at rest; they're only relative notions (to a frame of reference; i.e. no such thing as accelerating full stop). Would be super cool to draw clocks with hands moving at the appropriate speeds.
--->
-
   <div class="blogContent" layout="column" flex="60">
 
 
-<hr>
+<!-- <hr>
 <br>
 <div layout layout-align="center center">
   <table id="snakeTable"></table>
@@ -57,7 +50,7 @@
 <div layout layout-align="center center">
   <canvas id="sierptriangle" width="500" height="500"></canvas>
   <button ng-click="mc.startSierp()">Start!</button>
-</div>
+</div> -->
 
 <hr>
 
