--- a/views/templates/about.html
+++ b/views/templates/about.html
@@ -109,7 +109,7 @@
             </div>
 
             <div layout="row" class="emailCont" layout layout-align="center center">
-              <a class="linkTextAbout" href="styles/resume_zstout_3.pdf"><span>My Resume</span></a>
+              <a class="linkTextAbout" href="styles/resume_zs_development.pdf"><span>My Resume</span></a>
             </div>
 
             <!-- </div> -->
