--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -64,9 +64,12 @@
   </div>
   <div layout="row" layout-align="center center" class="blogText">
     <div layout="column" id="datesList" >
-      <!-- <div layout="row" class="brags">1/13/18</div>
+      <!-- <div layout="row" class="brags">1/17/18</div>
+      <div layout="row" class="brags">1/16/18</div>
+      <div layout="row" class="brags">1/15/18</div>
+      <div layout="row" class="brags">1/13/18</div>
+      <div layout="row" class="brags">1/12/18</div> -->
       <div layout="row" class="brags">1/12/18</div>
-      <div layout="row" class="brags">1/10/18</div> -->
       <div layout="row" class="brags">1/8/18</div>
       <div layout="row" class="brags">1/6/18</div>
       <div layout="row" class="brags">1/4/18</div>
@@ -82,14 +85,21 @@
     </div>
     <div layout="column" layout-align="center center" >
       <!-- <div layout="row" class="brags2" ng-click="bc.goPost(14)">
-        The Sierpinski Triangle
+        Rilke's <i>Archaic Torso of Apollo</i>
       </div>
+      <div layout="row" class="brags2" ng-click="bc.goPost(14)">
+        What Does Cartesian Skepticism Really Mean?
+      </div>
+
       <div layout="row" class="brags2" ng-click="bc.goPost(13)">
         Building Snake
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(12)">
         Greek Tragedy: On Becoming Oneself
       </div> -->
+      <div layout="row" class="brags2" ng-click="bc.goPost(14)">
+        Drawing The Sierpinski Triangle
+      </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(11)">
         Self-Conception as Carapace
       </div>
