--- a/views/templates/other.html
+++ b/views/templates/other.html
@@ -1,6 +1,13 @@
 <div layout="row" class="wholeEnchilada">
   <div layout="column" flex="15" ng-controller="NavController as nc">
 
+    <!-- Idea for post: kinetic and potential energy of, say, a pendulum.
+
+    Idea for post: Stretch, implement slider for current value, and change view to look straight down the current-line and see how magnetic fields are affected, i.e. see a ball moving with different speed.
+
+    Idea for post: Relativity elevators with balls shooting from top to bottom. That visual really stuck with me. And you can't know whether you're accelerating or at rest; they're only relative notions (to a frame of reference; i.e. no such thing as accelerating full stop). Would be super cool to draw clocks with hands moving at the appropriate speeds.
+  -->
+  <!-- A beautiful work of art elevates and ennobles its subject and its matter.  -->
 
     <div class="sideNavHolder">
       <div class="sideNav">
@@ -40,14 +47,87 @@
   <div class="blogContent" layout="column" flex="60">
 
 
-      <!-- Idea for post: kinetic and potential energy of, say, a pendulum.
+    <!-- <hr>
 
-      Idea for post: Stretch, implement slider for current value, and change view to look straight down the current-line and see how magnetic fields are affected, i.e. see a ball moving with different speed.
+        <div layout="column" layout-align="center center" id="post22">
+          <div >
+            <h2 class="blogTitle">What Does Cartesian Skepticism Really Mean?</i></h2>
+          </div>
+          <div class="blogSubtitle">
+            Jan. 10, 2018
+          </div>
+        </div>
 
-      Idea for post: Relativity elevators with balls shooting from top to bottom. That visual really stuck with me. And you can't know whether you're accelerating or at rest; they're only relative notions (to a frame of reference; i.e. no such thing as accelerating full stop). Would be super cool to draw clocks with hands moving at the appropriate speeds.
-    -->
+    <div class="blogText">
+      I have always been troubled by <i>Matrix</i>-esque skeptical scenarios: What if I'm dreaming? What if a demon god is controlling all of my experiences to delude me into believing that there are physical objects? (This is the more flavorful hypothesis Descartes puts forward in the <i>Meditations</i>.)
+    </div>
 
-<!--
+    <div class="blogText">
+      But recently I have begun to wonder <i>why</i> I have found these hypotheses so disconcerting. What's the alternative &mdash; that physical objects are composed of clumps of balls that are surrounded (at a huge distance, relative to their size) by tiny specks of electricity, and that our conscious experiences emerge out of the coordinated actions of billions of tiny sperm-shaped cells?
+    </div>
+
+    <div class="blogText">
+      While it's of course true that the declarations of science have a different standing than the Evil Demon God hypothesis, it isn't at at clear that this difference amounts to the latter failing to provide some <i>certain guarantee</i> that the former offers.
+    </div>
+
+    <hr>
+
+        <div layout="column" layout-align="center center" id="post22">
+          <div >
+            <h2 class="blogTitle">Rilke's <i>Archaic Torso of Apollo</i></h2>
+          </div>
+          <div class="blogSubtitle">
+            Jan. 10, 2018
+          </div>
+        </div>
+
+    <div class="blogText">
+      Recently I had the pleasure of playing the role of the Table Topics speaker at our weekly Toastmasters meeting. For our topic I chose the idea of beauty.
+    </div>
+
+    <div class="blogText">
+      The concept seems at once ubiquitous and nebulous. As easily as it comes to my lips, so stubbornly does the thought it expresses resist clarification. I find it difficult to translate my thought into language not containing the word 'beauty'.
+    </div>
+
+    <div class="blogText">
+      It helps to have something concrete to ground our reflection. One of my favorite poems, Rilke's <i>Archaic Torso of Apollo</i>, has the advantage that in addition to being a beautiful poem, it is also in many ways <i>about</i> the experience of beauty.
+    </div>
+
+    <div class="poem" layout layout-align="center center">
+      <pre class="poem">
+        We cannot know his legendary head
+        with eyes like ripening fruit. And yet his torso
+        is still suffused with brilliance from inside,
+        like a lamp, in which his gaze, now turned to low,
+
+        gleams in all its power. Otherwise
+        the curved breast could not dazzle you so, nor could
+        a smile run through the placid hips and thighs
+        to that dark center where procreation flared.
+
+        Otherwise this stone would seem defaced
+        beneath the translucent cascade of the shoulders
+        and would not glisten like a wild beast's fur:
+
+        would not, from all the borders of itself,
+        burst like a star: for here there is no place
+        that does not see you. You must change your life.</pre>
+    </div>
+
+    <div class="blogText">
+      Indeed, beauty "dazzles." It combines a "smile" with a "dark center," a felt brilliance with an unknown head. The experience of beauty demands to be recorded, and yet with proportionate intensity it refuses to be ensnared, trapped on the page or in the mind. It has a quality of <i>aliveness</i>; indeed, it "glisten[s] like a wild beast's fur."
+    </div>
+
+    <div class="blogText">
+      Another aspect of beauty that I think Rilke captures is its relation to the ethical dimension of life. The imperative that concludes the poem arrives abruptly, and yet we feel somehow prepared for it. Much of the conclusion's force can be traced to the way in which the earlier aesthetic musings pry open a certain emotional part of the reader, preparing her for contact with the ethical dimension.
+    </div>
+
+    <div class="blogText">
+      &alpha;&iota;&sigma;&theta;&eta;&sigma;&iota;&sigmaf;
+    </div>
+
+
+
         <hr>
 
             <div layout="column" layout-align="center center" id="post22">
