a few touch ups

--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -129,7 +129,7 @@
         Getting Started with Matter.js
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(2)">
-        More HTML Canvas: Fun with Conic Sections
+        More Canvas: Fun with Conic Sections
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(1)">
         Getting Started with HTML Canvas Animations
