--- a/views/templates/math.html
+++ b/views/templates/math.html
@@ -75,7 +75,7 @@
 </div>
 
 <div class="blogText">
-  Seeing this triangle materialize out of thin air makes me think of that line, <i>"Euclid alone has looked on beauty bare."</i> It's magic.
+  Seeing this triangle materialize out of thin air makes me think of that line, <i>Euclid alone has looked on beauty bare.</i> It's magic.
 </div>
 
 <div class="blogText">
@@ -83,15 +83,15 @@
 </div>
 
 <div class="blogText">
-  To say that a shape is 2-dimensional is to say that when you scale its sides by a factor of 3 (in general <i>n</i>), its area grows by a factor of 9 (in general <i>n<sup>2</sup></i>). To say that a shape is 3-dimensional is to say that when you scale its sides by a factor of 3 (in general <i>n</i>), its volume grows by a factor of 27 (in general <i>n<sup>3</sup></i>).
+  To say that a shape is 2-dimensional is to say that when you scale its sides by a factor of <i>n</i> (e.g. 3), its area grows by a factor of <i>n<sup>2</sup></i> (e.g. 9). To say that a shape is 3-dimensional is to say that when you scale its sides by a factor of <i>n</i> (e.g. 5), its volume grows by a factor of <i>n<sup>3</sup></i> (e.g. 125).
 </div>
 
 <div class="blogText">
-  What happens when we double the length of a side on our Sierpinski triangle? Compare one of the three first-level triangles with the whole triangle. They stand in this relationship. So we have a <i>threefold</i> increase in size when we double the length. If the fractal were 2-dimensional, we would expect a fourfold increase, and if it were 1-dimensional, we would expect a twofold increase.
+  What happens when we double the length of a side on our Sierpinski triangle? Compare one of the three first-level triangles with the whole triangle. The whole has sides with double the length of each first-level triangle's side. So we have a <i>threefold</i> increase in size when we double the side's length. If the fractal were 2-dimensional, we would expect a fourfold increase, and if it were 1-dimensional, we would expect a twofold increase.
 </div>
 
 <div class="blogText">
-  (If you're interested, the precise value of the triangle's dimension is <i>log</i>(3)/<i>log</i>(2) = 1.58. We divide the log of the scaled-size by the log of the scaled-length; so in the 2-dimensional case, we have <i>dim</i> = <i>log</i>(4)/<i>log</i>(2) = 2.)
+  (If you're interested, the precise value of the triangle's dimension is <i>log</i>(3)/<i>log</i>(2) = 1.58. We divide the log of the scaled-size by the log of the scaled-length to obtain the dimension. In the 2-dimensional case, for example, <i>log</i>(4)/<i>log</i>(2) = 2.)
 </div>
 
 <div class="blogText">
@@ -342,7 +342,7 @@
 
     <div layout="column" layout-align="center center" id="post2">
       <div >
-        <h2 class="blogTitle">More HTML Canvas: Fun with Conic Sections</h2>
+        <h2 class="blogTitle">More Canvas: Fun with Conic Sections</h2>
 
       </div>
       <div class="blogSubtitle">
@@ -459,7 +459,7 @@
       <li ng-click="mc.goToPost(5)">Exploring the Golden Ratio</li>
       <!-- <li ng-click="mc.goToPost(4)">Writing SQL Queries</li> -->
       <!-- <li ng-click="mc.goToPost(3)">Getting Started with Matter.js</li> -->
-      <li ng-click="mc.goToPost(2)">More HTML Canvas: Fun with Conic Sections</li>
+      <li ng-click="mc.goToPost(2)">More Canvas: Fun with Conic Sections</li>
       <!-- <li ng-click="mc.goToPost(1)">Getting Started with HTML Canvas Animations</li> -->
     </ul>
   </div>
